--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="vCSaHG9T04ApR_o20kkkyxLEy84Wyrq2vWS88jKRlFM" />
+    <meta name="msvalidate.01" content="CEC6C21FD43502B456A8B9820C59ACAE" />
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
